Fix landing page on smaller screens

--- a/wp-content/plugins/multi-image-buttons/src/block/style.scss
+++ b/wp-content/plugins/multi-image-buttons/src/block/style.scss
@@ -40,9 +40,22 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	font-size: 3rem;
+	font-size: 1rem;
 	color: $white;
 }
+
+@media only screen and (min-width: 512px) {
+	.tb-multi-image-button-caption {
+		font-size: 2rem;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.tb-multi-image-button-caption {
+		font-size: 3rem;
+	}
+}
+
 
 
 .tb-multi-image-button:hover {
